<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ahyoxsoft.restauranthub.auth.ResetPasswordPage">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_view"
                    android:padding="10dp"
                    android:editable="false"
                    android:inputType="textCapSentences"
                    android:hint="@string/username_hint"/>

                <EditText
                    android:id="@+id/old_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_view"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/old_password"/>

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_view"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/new_password"/>
                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_view"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_new_password"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/submit"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/light_gray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_button"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
