<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/grey"
    tools:context="com.ahyoxsoft.restauranthub.main.OrderSuccessPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <!-- First Layer -->
            <LinearLayout
                android:id="@+id/first"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_perform"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/save"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_weight=".5"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/oval_grey">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/save"/>

                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_weight=".5"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/hub">
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_weight=".5"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/oval_grey">
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Second Layer -->
            <LinearLayout
                android:id="@+id/middle"
                android:layout_below="@+id/first"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_confirmed"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/restaurant_name_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/restaurant_order_default_message"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/qr_code"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <!-- Third Layer -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_below="@+id/middle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_address"
                        android:textStyle="bold"
                        android:layout_weight=".7"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/time_of_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="14:08"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/delivery_address"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_default_address"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>
